--- a/src/App.scss
+++ b/src/App.scss
@@ -11,7 +11,7 @@
 
 .App {
     width: 100%;
-    height: 100vh;
+    height: auto;
     display: flex;
     flex-direction: column;
     align-items: center;
@@ -21,11 +21,15 @@
         display: flex;
         justify-content: center;
         height: $heightNavbar;
+        position: sticky;
+        top: 0;
+        z-index: $zIndexMax;
 
         .navbar_contents {
             width: 100%;
             max-width: $widthContent;
             height: 100%;
+
         }
     }
 
@@ -33,5 +37,17 @@
         width: 100%;
         max-width: $widthContent;
         height: 100%;
+    }
+
+    .footers {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+
+        .navbar_contents {
+            width: 100%;
+            max-width: $widthContent;
+            height: 100%;
+        }
     }
 }
