--- a/src/components/Navbars/Navbar.scss
+++ b/src/components/Navbars/Navbar.scss
@@ -2,11 +2,13 @@
 
 .navbar {
     height: $heightNavbar;
+    background-color: rgb(123, 199, 199) !important;
 
     .container_fluid {
         .navbar-brand {
             font-size: $sizeLarge;
             margin-left: 10px;
+            font-family:$fontTitle;
         }
     }
 
@@ -14,12 +16,13 @@
         margin-right: 15px;
         align-items: center;
         height: 100%;
+        width: 300px;
 
         .icon {
             margin-left: 10px;
 
             .icon_img {
-                margin-left: 10px;
+                margin-left: 30px;
 
                 &:last-child {
                     margin-left: none;
@@ -29,14 +32,15 @@
     }
 
     .avatarBox {
-        width: 50px;
+        width: 30px;
         border-radius: 50%;
         display: flex;
         background-color: rgb(81, 77, 77);
 
         .avatarImg {
-            width: 50px;
-            height: 50px;
+            border-radius: 50%;
+            width: 30px;
+            height: 30px;
             object-fit: fill;
         }
     }
