--- a/src/pages/Carts/Cart.scss
+++ b/src/pages/Carts/Cart.scss
@@ -39,10 +39,25 @@
                 display: flex;
                 justify-content: space-between;
 
+                .price {
+                    color: #de7474;
+                    font-weight: bold;
+                    font-size: 20px;
+                }
+
                 .cart_count {
-                    width: 100px;
+                    width: 70px;
                     height: 30px;
                     text-align: center;
+                    border-radius: 5px;
+                    background-color: #de7474;
+                    font-size: 20px;
+
+                    button {
+                        background-color: #de7474;
+                        border: none;
+                        font-size: 20px;
+                    }
 
 
                 }
