--- a/src/pages/Payment/Payment.scss
+++ b/src/pages/Payment/Payment.scss
@@ -1,16 +1,20 @@
 .payment_container {
     display: flex;
     width: 100%;
-
+    height: 350px;
+    justify-content: space-around;
 
     .payment_input {}
 
     .payment_total {
-        margin-left: 400px;
-
         .payment_img {
             height: 100px;
-            width: 100px;
+            width: 200px;
+
+            .payment_img-icon {
+                width: 100%;
+                height: 100%;
+            }
         }
     }
 }
