--- a/src/pages/Payment/Payment.scss
+++ b/src/pages/Payment/Payment.scss
@@ -1,20 +1,116 @@
-.payment_container {
+@import "@varScss";
+
+.shipping {
     display: flex;
-    width: 100%;
-    height: 350px;
     justify-content: space-around;
+    margin-top: 20px;
 
-    .payment_input {}
+    .form-group {
+        border: 1px solid black;
+        padding: 20px;
+        width: 400px;
+        height: 500px;
 
-    .payment_total {
-        .payment_img {
-            height: 100px;
-            width: 200px;
+        h2 {
+            font-weight: bold;
+            font-family: $fontTitle;
+        }
 
-            .payment_img-icon {
+        .form-groupInput {
+            .form-group-input {
+                border: 1px solid black;
                 width: 100%;
-                height: 100%;
+                margin: 10px 0px;
+                height: 40px;
+                border-radius: 5px;
             }
         }
+
+        .form-group-checkout {
+            width: 100%;
+            height: 40px;
+            cursor: pointer;
+            color: rgb(236, 229, 229);
+            font-size: 20px;
+            line-height: 16px;
+            padding: 9px;
+            border-radius: 10px;
+            font-family: Georgia, serif;
+            font-weight: normal;
+            text-decoration: none;
+            font-style: normal;
+            font-variant: normal;
+            text-transform: none;
+            background-image: linear-gradient(to right, rgb(68, 117, 21) 0%, rgb(12, 124, 104) 54%, rgb(28, 131, 99) 100%);
+            box-shadow: rgba(0, 0, 0, 0.38) 5px 5px 31px 5px;
+            display: inline-block;
+        }
+
+
     }
+
+    .shippingDetails {
+        margin-top: 10px;
+
+        img {
+            width: 150px;
+            margin-left: 8px;
+        }
+
+        .shippingDetails_button {
+            display: flex;
+        }
+
+
+    }
+
+    .informationLine {
+        border: 1px solid black;
+        padding: 20px;
+        width: 430px;
+        overflow: scroll;
+
+        .informationLine_product {
+            display: flex;
+
+            img {
+                width: 100px;
+                height: 100px;
+            }
+
+            .informationLine_text {
+                margin-left: 30px;
+
+                h4 {
+                    color: green;
+                    font-weight: bold;
+                }
+
+                p {
+                    color: red;
+                    font-weight: bold;
+                }
+            }
+        }
+
+        .informationLine_total {
+            margin-top: 20px;
+            border-top: 2px solid green;
+            display: flex;
+
+            h3 {
+                font-weight: bold;
+                font-family: $fontTitle;
+            }
+
+            span {
+                margin-left: 250px;
+                color: red;
+                font-weight: bold;
+            }
+        }
+
+
+    }
+
 }
