--- a/src/components/Navbars/Navbar.scss
+++ b/src/components/Navbars/Navbar.scss
@@ -3,6 +3,7 @@
 .navbar {
     height: $heightNavbar;
     background-color: rgb(123, 199, 199) !important;
+    padding: 0 20px;
 
     .container_fluid {
         .navbar-brand {
