--- a/src/pages/Receipts/components/ReceiptDetail.scss
+++ b/src/pages/Receipts/components/ReceiptDetail.scss
@@ -68,4 +68,24 @@
 
 
     }
+
+    .informationLine_total_price {
+        margin-left: 30px;
+        display: flex;
+        border-top: 2px solid green;
+        margin-top: 10px;
+
+        h1 {
+            margin-top: 10px;
+            font-family: $fontTitle;
+        }
+
+        p {
+            margin-top: 20px;
+            font-size: 20px;
+            margin-left: 20px;
+            color: red;
+            font-weight: bold;
+        }
+    }
 }
