--- a/src/pages/Payment/Payment.scss
+++ b/src/pages/Payment/Payment.scss
@@ -75,7 +75,7 @@
         width: 430px;
         overflow-y: auto;
         overflow-x: hidden;
-        height: 100%;
+        height: 500px;
 
         .informationLine_product {
             display: flex;
